# dust-voda

./: .gitignore  Cargo.toml  build.rs
.circleci/: config.yml
android/: .gitignore  build.gradle  cargo.toml  local.properties  settings.gradle
android/app/: Cargo.toml  build.gradle
android/app/src/: lib.rs
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/s2e_systems/: MainActivity.java
android/app/src/main/java/tw/mapacode/androidsink/: MainActivity.java
android/publisher/: Cargo.toml  build.gradle
android/publisher/src/: lib.rs
android/subscriber/: Cargo.toml  build.gradle
android/subscriber/src/: lib.rs
android/subscriber/src/main/: AndroidManifest.xml
src/: VideoDDS.idl  main_publisher.rs  main_subscriber.rs
