[package]
name = "androidsink"
version = "0.1.0"
authors = ["Sirius Wu <ccwu660601@mapacode.tw>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[dependencies]
gstreamer = "0.22.4"
gstreamer-app = "0.22.0"
gstreamer-video = "0.22.4"
gstreamer-video-sys = "0.22.1"
glib = "0.19.5"
dust_dds = { version = "0.9.0", git = "https://github.com/s2e-systems/dust-dds.git", branch = "main" }
jni = { version = "0.21.1", default-features = false }
ndk-sys = "0.6.0"
